Add se:split markers.

--- a/src/epub/text/body.xhtml
+++ b/src/epub/text/body.xhtml
@@ -5,6 +5,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_I" id="CHAPTER_I"></a>CHAPTER I</h3>
 
      <h2>THE PIECE OF WOOD THAT LAUGHED
@@ -100,6 +101,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_II" id="CHAPTER_II"></a>CHAPTER II</h3>
 
      <h2>MASTER CHERRY GIVES THE WOOD AWAY</h2>
@@ -255,6 +257,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_III" id="CHAPTER_III"></a>CHAPTER III</h3>
 
      <h2>GEPPETTO NAMES HIS PUPPET PINOCCHIO</h2>
@@ -443,6 +446,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_IV" id="CHAPTER_IV"></a>CHAPTER IV</h3>
 
      <h2>THE TALKING-CRICKET SCOLDS PINOCCHIO</h2>
@@ -555,6 +559,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_V" id="CHAPTER_V"></a>CHAPTER V</h3>
 
      <h2>THE FLYING EGG</h2>
@@ -652,6 +657,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_VI" id="CHAPTER_VI"></a>CHAPTER VI</h3>
 
      <h2>PINOCCHIO'S FEET BURN TO CINDERS</h2>
@@ -721,6 +727,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_VII" id="CHAPTER_VII"></a>CHAPTER VII</h3>
 
      <h2>GEPPETTO GIVES HIS OWN BREAKFAST
@@ -877,6 +884,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_VIII" id="CHAPTER_VIII"></a>CHAPTER VIII</h3>
 
      <h2>GEPPETTO MAKES PINOCCHIO NEW FEET</h2>
@@ -1004,6 +1012,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_IX" id="CHAPTER_IX"></a>CHAPTER IX</h3>
 
      <h2>PINOCCHIO GOES TO SEE A PUPPET-SHOW</h2>
@@ -1121,6 +1130,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_X" id="CHAPTER_X"></a>CHAPTER X</h3>
 
      <h2>THE PUPPETS RECOGNIZE THEIR BROTHER PINOCCHIO</h2>
@@ -1227,6 +1237,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XI" id="CHAPTER_XI"></a>CHAPTER XI</h3>
 
      <h2>FIRE-EATER SNEEZES AND PARDONS PINOCCHIO</h2>
@@ -1376,6 +1387,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XII" id="CHAPTER_XII"></a>CHAPTER XII</h3>
 
      <h2>PINOCCHIO RECEIVES A PRESENT OF FIVE GOLD PIECES</h2>
@@ -1620,6 +1632,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XIII" id="CHAPTER_XIII"></a>CHAPTER XIII</h3>
 
      <h2>THE INN OF THE RED CRAW-FISH</h2>
@@ -1778,6 +1791,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XIV" id="CHAPTER_XIV"></a>CHAPTER XIV</h3>
 
      <h2>PINOCCHIO FALLS AMONGST ASSASSINS</h2>
@@ -1923,6 +1937,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XV" id="CHAPTER_XV"></a>CHAPTER XV</h3>
 
      <h2>THE ASSASSINS HANG PINOCCHIO TO THE BIG OAK</h2>
@@ -2066,6 +2081,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XVI" id="CHAPTER_XVI"></a>CHAPTER XVI</h3>
 
      <h2>THE BEAUTIFUL CHILD RESCUES THE PUPPET</h2>
@@ -2213,6 +2229,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XVII" id="CHAPTER_XVII"></a>CHAPTER XVII</h3>
 
      <h2>PINOCCHIO WILL NOT TAKE HIS MEDICINE</h2>
@@ -2470,6 +2487,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XVIII" id="CHAPTER_XVIII"></a>CHAPTER XVIII</h3>
 
      <h2>PINOCCHIO AGAIN MEETS THE FOX AND THE CAT</h2>
@@ -2687,6 +2705,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XIX" id="CHAPTER_XIX"></a>CHAPTER XIX</h3>
 
      <h2>PINOCCHIO IS ROBBED OF HIS MONEY</h2>
@@ -2828,6 +2847,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XX" id="CHAPTER_XX"></a>CHAPTER XX</h3>
 
      <h2>PINOCCHIO STARTS BACK TO THE FAIRY'S HOUSE</h2>
@@ -2941,6 +2961,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XXI" id="CHAPTER_XXI"></a>CHAPTER XXI</h3>
 
      <h2>PINOCCHIO ACTS AS WATCH-DOG</h2>
@@ -3054,6 +3075,7 @@
           <img src="images/illus-098.png" alt="The New Watch-Dog" title="The New Watch-Dog" />
      </div>
 
+     <!--se:split-->
      <h3><a name="CHAPTER_XXII" id="CHAPTER_XXII"></a>CHAPTER XXII</h3>
 
      <h2>PINOCCHIO DISCOVERS THE ROBBERS</h2>
@@ -3209,6 +3231,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XXIII" id="CHAPTER_XXIII"></a>CHAPTER XXIII</h3>
 
      <h2>PINOCCHIO FLIES TO THE SEASHORE</h2>
@@ -3440,6 +3463,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XXIV" id="CHAPTER_XXIV"></a>CHAPTER XXIV</h3>
 
      <h2>PINOCCHIO FINDS THE FAIRY AGAIN</h2>
@@ -3706,6 +3730,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XXV" id="CHAPTER_XXV"></a>CHAPTER XXV</h3>
 
      <h2>PINOCCHIO PROMISES THE FAIRY TO BE GOOD</h2>
@@ -3866,6 +3891,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XXVI" id="CHAPTER_XXVI"></a>CHAPTER XXVI</h3>
 
      <h2>THE TERRIBLE DOG-FISH</h2>
@@ -4013,6 +4039,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XXVII" id="CHAPTER_XXVII"></a>CHAPTER XXVII</h3>
 
      <h2>PINOCCHIO IS ARRESTED BY THE GENDARMES</h2>
@@ -4280,6 +4307,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XXVIII" id="CHAPTER_XXVIII"></a>CHAPTER XXVIII</h3>
 
      <h2>PINOCCHIO ESCAPES BEING FRIED LIKE A FISH</h2>
@@ -4495,6 +4523,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XXIX" id="CHAPTER_XXIX"></a>CHAPTER XXIX</h3>
 
      <h2>HE RETURNS TO THE FAIRY'S HOUSE</h2>
@@ -4824,6 +4853,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XXX" id="CHAPTER_XXX"></a>CHAPTER XXX</h3>
 
      <h2>THE "LAND OF BOOBIES"</h2>
@@ -5078,6 +5108,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XXXI" id="CHAPTER_XXXI"></a>CHAPTER XXXI</h3>
 
      <h2>PINOCCHIO ENJOYS FIVE MONTHS OF HAPPINESS</h2>
@@ -5333,6 +5364,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XXXII" id="CHAPTER_XXXII"></a>CHAPTER XXXII</h3>
 
      <h2>PINOCCHIO TURNS INTO A DONKEY</h2>
@@ -5607,6 +5639,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XXXIII" id="CHAPTER_XXXIII"></a>CHAPTER XXXIII</h3>
 
      <h2>PINOCCHIO IS TRAINED FOR THE CIRCUS</h2>
@@ -5964,6 +5997,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XXXIV" id="CHAPTER_XXXIV"></a>CHAPTER XXXIV</h3>
 
      <h2>PINOCCHIO IS SWALLOWED BY THE DOG-FISH</h2>
@@ -6269,6 +6303,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XXXV" id="CHAPTER_XXXV"></a>CHAPTER XXXV</h3>
 
      <h2>A HAPPY SURPRISE FOR PINOCCHIO</h2>
@@ -6481,6 +6516,7 @@
 
 
      <hr style="width: 65%;" />
+     <!--se:split-->
      <h3><a name="CHAPTER_XXXVI" id="CHAPTER_XXXVI"></a>CHAPTER XXXVI</h3>
 
      <h2>PINOCCHIO AT LAST CEASES TO BE A PUPPET
