--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -11,8 +11,7 @@
 				<h2 epub:type="title">Colophon</h2>
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo se:color-depth.black-on-transparent"/>
 			</header>
-			<p><i epub:type="se:name.publication.book">Pinocchio: The Tale of a Puppet --pg-url https://www.gutenberg.org/ebooks/16865
-</i><br/>
+			<p><i epub:type="se:name.publication.book">Pinocchio: The Tale of a Puppet --pg-url https://www.gutenberg.org/ebooks/16865</i><br/>
 			was published in YEAR by<br/>
 			<a href="https://en.wikipedia.org/wiki/Carlo_Collodi">Carlo Collodi</a>.</p>
 			<p>This ebook was produced for the<br/>
