--- a/src/epub/text/titlepage.xhtml
+++ b/src/epub/text/titlepage.xhtml
@@ -7,8 +7,7 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="titlepage" epub:type="titlepage">
-			<img alt="The titlepage for the Standard Ebooks edition of Pinocchio: The Tale of a Puppet --pg-url https://www.gutenberg.org/ebooks/16865
-, by Carlo Collodi" src="../images/titlepage.svg" epub:type="se:color-depth.black-on-transparent"/>
+			<img alt="The titlepage for the Standard Ebooks edition of Pinocchio: The Tale of a Puppet --pg-url https://www.gutenberg.org/ebooks/16865 , by Carlo Collodi" src="../images/titlepage.svg" epub:type="se:color-depth.black-on-transparent"/>
 		</section>
 	</body>
 </html>
