--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,112 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/chapter-1.xhtml" epub:type="z3998:roman">I: The Piece Of Wood That Laughed And Cried Like A Child</a>
+				</li>
+				<li>
+					<a href="text/chapter-2.xhtml" epub:type="z3998:roman">II: Master Cherry Gives The Wood Away</a>
+				</li>
+				<li>
+					<a href="text/chapter-3.xhtml" epub:type="z3998:roman">III: Geppetto Names His Puppet Pinocchio</a>
+				</li>
+				<li>
+					<a href="text/chapter-4.xhtml" epub:type="z3998:roman">IV: The Talking Cricket Scolds Pinocchio</a>
+				</li>
+				<li>
+					<a href="text/chapter-5.xhtml" epub:type="z3998:roman">V: The Flying Egg</a>
+				</li>
+				<li>
+					<a href="text/chapter-6.xhtml" epub:type="z3998:roman">VI: Pinocchio S Feet Burn To Cinders</a>
+				</li>
+				<li>
+					<a href="text/chapter-7.xhtml" epub:type="z3998:roman">VII: Geppetto Gives His Own Breakfast To Pinocchio</a>
+				</li>
+				<li>
+					<a href="text/chapter-8.xhtml" epub:type="z3998:roman">VIII: Geppetto Makes Pinocchio New Feet</a>
+				</li>
+				<li>
+					<a href="text/chapter-9.xhtml" epub:type="z3998:roman">IX: Pinocchio Goes To See A Puppet Show</a>
+				</li>
+				<li>
+					<a href="text/chapter-10.xhtml" epub:type="z3998:roman">X: The Puppets Recognize Their Brother Pinocchio</a>
+				</li>
+				<li>
+					<a href="text/chapter-11.xhtml" epub:type="z3998:roman">XI: Fire Eater Sneezes And Pardons Pinocchio</a>
+				</li>
+				<li>
+					<a href="text/chapter-12.xhtml" epub:type="z3998:roman">XII: Pinocchio Receives A Present Of Five Gold Pieces</a>
+				</li>
+				<li>
+					<a href="text/chapter-13.xhtml" epub:type="z3998:roman">XIII: The Inn Of The Red Craw Fish</a>
+				</li>
+				<li>
+					<a href="text/chapter-14.xhtml" epub:type="z3998:roman">XIV: Pinocchio Falls Amongst Assassins</a>
+				</li>
+				<li>
+					<a href="text/chapter-15.xhtml" epub:type="z3998:roman">XV: The Assassins Hang Pinocchio To The Big Oak</a>
+				</li>
+				<li>
+					<a href="text/chapter-16.xhtml" epub:type="z3998:roman">XVI: The Beautiful Child Rescues The Puppet</a>
+				</li>
+				<li>
+					<a href="text/chapter-17.xhtml" epub:type="z3998:roman">XVII: Pinocchio Will Not Take His Medicine</a>
+				</li>
+				<li>
+					<a href="text/chapter-18.xhtml" epub:type="z3998:roman">XVIII: Pinocchio Again Meets The Fox And The Cat</a>
+				</li>
+				<li>
+					<a href="text/chapter-19.xhtml" epub:type="z3998:roman">XIX: Pinocchio Is Robbed Of His Money</a>
+				</li>
+				<li>
+					<a href="text/chapter-20.xhtml" epub:type="z3998:roman">XX: Pinocchio Starts Back To The Fairy’s House</a>
+				</li>
+				<li>
+					<a href="text/chapter-21.xhtml" epub:type="z3998:roman">XXI: Pinocchio Acts As Watch Dog</a>
+				</li>
+				<li>
+					<a href="text/chapter-22.xhtml" epub:type="z3998:roman">XXII: Pinocchio Discovers The Robbers</a>
+				</li>
+				<li>
+					<a href="text/chapter-23.xhtml" epub:type="z3998:roman">XXIII: Pinocchio Flies To The Seashore</a>
+				</li>
+				<li>
+					<a href="text/chapter-24.xhtml" epub:type="z3998:roman">XXIV: Pinocchio Finds The Fairy Again</a>
+				</li>
+				<li>
+					<a href="text/chapter-25.xhtml" epub:type="z3998:roman">XXV: Pinocchio Promises The Fairy To Be Good</a>
+				</li>
+				<li>
+					<a href="text/chapter-26.xhtml" epub:type="z3998:roman">XXVI: The Terrible Dog Fish</a>
+				</li>
+				<li>
+					<a href="text/chapter-27.xhtml" epub:type="z3998:roman">XXVII: Pinocchio Is Arrested By The Gendarmes</a>
+				</li>
+				<li>
+					<a href="text/chapter-28.xhtml" epub:type="z3998:roman">XXVIII: Pinocchio Escapes Being Fried Like A Fish</a>
+				</li>
+				<li>
+					<a href="text/chapter-29.xhtml" epub:type="z3998:roman">XXIX: He Returns To The Fairy’s House</a>
+				</li>
+				<li>
+					<a href="text/chapter-30.xhtml" epub:type="z3998:roman">XXX: The “Land Of Boobies”</a>
+				</li>
+				<li>
+					<a href="text/chapter-31.xhtml" epub:type="z3998:roman">XXXI: Pinocchio Enjoys Five Months Of Happiness</a>
+				</li>
+				<li>
+					<a href="text/chapter-32.xhtml" epub:type="z3998:roman">XXXII: Pinocchio Turns Into A Donkey</a>
+				</li>
+				<li>
+					<a href="text/chapter-33.xhtml" epub:type="z3998:roman">XXXIII: Pinocchio Is Trained For The Circus</a>
+				</li>
+				<li>
+					<a href="text/chapter-34.xhtml" epub:type="z3998:roman">XXXIV: Pinocchio Is Swallowed By The Dog Fish</a>
+				</li>
+				<li>
+					<a href="text/chapter-35.xhtml" epub:type="z3998:roman">XXXV: A Happy Surprise For Pinocchio</a>
+				</li>
+				<li>
+					<a href="text/chapter-36.xhtml" epub:type="z3998:roman">XXXVI: Pinocchio At Last Ceases To Be A Puppet And Becomes A Boy</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -34,7 +139,7 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">Pinocchio: The Tale of a Puppet</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
