Fix chapter 6 title.

--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -29,7 +29,7 @@
 					<a href="text/chapter-5.xhtml" epub:type="z3998:roman">V: The Flying Egg</a>
 				</li>
 				<li>
-					<a href="text/chapter-6.xhtml" epub:type="z3998:roman">VI: Pinocchio S Feet Burn To Cinders</a>
+					<a href="text/chapter-6.xhtml" epub:type="z3998:roman">VI: Pinocchio’s Feet Burn To Cinders</a>
 				</li>
 				<li>
 					<a href="text/chapter-7.xhtml" epub:type="z3998:roman">VII: Geppetto Gives His Own Breakfast To Pinocchio</a>
