--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -44,13 +44,13 @@
 					<a href="text/chapter-10.xhtml" epub:type="z3998:roman">X: The Puppets Recognize Their Brother Pinocchio</a>
 				</li>
 				<li>
-					<a href="text/chapter-11.xhtml" epub:type="z3998:roman">XI: Fire Eater Sneezes And Pardons Pinocchio</a>
+					<a href="text/chapter-11.xhtml" epub:type="z3998:roman">XI: Fire-Eater Sneezes And Pardons Pinocchio</a>
 				</li>
 				<li>
 					<a href="text/chapter-12.xhtml" epub:type="z3998:roman">XII: Pinocchio Receives A Present Of Five Gold Pieces</a>
 				</li>
 				<li>
-					<a href="text/chapter-13.xhtml" epub:type="z3998:roman">XIII: The Inn Of The Red Craw Fish</a>
+					<a href="text/chapter-13.xhtml" epub:type="z3998:roman">XIII: The Inn Of The Red Crawfish</a>
 				</li>
 				<li>
 					<a href="text/chapter-14.xhtml" epub:type="z3998:roman">XIV: Pinocchio Falls Amongst Assassins</a>
