--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,16 +12,16 @@
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo se:color-depth.black-on-transparent"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">Pinocchio: The Tale of a Puppet</i><br/>
-			was published in YEAR by<br/>
+			was published in 1883 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Carlo_Collodi">Carlo Collodi</a>.</p>
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
 			by<br/>
-			<a href="PRODUCER_URL">PRODUCER</a>,<br/>
-			and is based on a transcription produced in PG_YEAR by<br/>
-			<b class="name">TRANSCRIBER_1</b>, <b class="name">TRANSCRIBER_2</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<a href="https://davidangel.net">David Angel</a>,<br/>
+			and is based on a transcription produced in 2005 by<br/>
+			<b class="name">Mark C. Orton</b>, <b class="name">Melissa Er-Raqabi</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
-			<a href="PG_URL">Project Gutenberg</a><br/>
+			<a href="https://www.gutenberg.org/ebooks/16865">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
 			<a href="IA_URL">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
