Change to title.

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -11,7 +11,7 @@
 				<h2 epub:type="title">Colophon</h2>
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo se:color-depth.black-on-transparent"/>
 			</header>
-			<p><i epub:type="se:name.publication.book">Pinocchio: The Tale of a Puppet</i><br/>
+			<p><i epub:type="se:name.publication.book">Pinocchio</i><br/>
 			was published in 1883 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Carlo_Collodi">Carlo Collodi</a>.</p>
 			<p>This ebook was produced for the<br/>
@@ -35,7 +35,7 @@
 			<p>The first edition of this ebook was released on<br/>
 			<b>January 1, 1900, 12:00 <abbr class="time eoc">a.m.</abbr></b><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
-			<a href="https://standardebooks.org/ebooks/carlo-collodi/pinocchio-the-tale-of-a-puppet">standardebooks.org/ebooks/carlo-collodi/pinocchio-the-tale-of-a-puppet</a>.</p>
+			<a href="https://standardebooks.org/ebooks/carlo-collodi/the-adventures-of-pinocchio">standardebooks.org/ebooks/carlo-collodi/the-adventures-of-pinocchio</a>.</p>
 			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">standardebooks.org</a>.</p>
 		</section>
 	</body>
