--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,10 +14,10 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: The Piece Of Wood That Laughed And Cried Like A Child</a>
+					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: The Piece of Wood That Laughed and Cried Like a Child</a>
 				</li>
 				<li>
-					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: Master Cherry Gives The Wood Away</a>
+					<a href="text/chapter-2.xhtml"><span epub:type="z3998:roman">II</span>: Master Cherry Gives the Wood Away</a>
 				</li>
 				<li>
 					<a href="text/chapter-3.xhtml"><span epub:type="z3998:roman">III</span>: Geppetto Names His Puppet Pinocchio</a>
@@ -29,97 +29,97 @@
 					<a href="text/chapter-5.xhtml"><span epub:type="z3998:roman">V</span>: The Flying Egg</a>
 				</li>
 				<li>
-					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: Pinocchio’s Feet Burn To Cinders</a>
+					<a href="text/chapter-6.xhtml"><span epub:type="z3998:roman">VI</span>: Pinocchio’s Feet Burn to Cinders</a>
 				</li>
 				<li>
-					<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: Geppetto Gives His Own Breakfast To Pinocchio</a>
+					<a href="text/chapter-7.xhtml"><span epub:type="z3998:roman">VII</span>: Geppetto Gives His Own Breakfast to Pinocchio</a>
 				</li>
 				<li>
 					<a href="text/chapter-8.xhtml"><span epub:type="z3998:roman">VIII</span>: Geppetto Makes Pinocchio New Feet</a>
 				</li>
 				<li>
-					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: Pinocchio Goes To See A Puppet Show</a>
+					<a href="text/chapter-9.xhtml"><span epub:type="z3998:roman">IX</span>: Pinocchio Goes to See a Puppet Show</a>
 				</li>
 				<li>
 					<a href="text/chapter-10.xhtml"><span epub:type="z3998:roman">X</span>: The Puppets Recognize Their Brother Pinocchio</a>
 				</li>
 				<li>
-					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Fire-Eater Sneezes And Pardons Pinocchio</a>
+					<a href="text/chapter-11.xhtml"><span epub:type="z3998:roman">XI</span>: Fire-Eater Sneezes and Pardons Pinocchio</a>
 				</li>
 				<li>
-					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: Pinocchio Receives A Present Of Five Gold Pieces</a>
+					<a href="text/chapter-12.xhtml"><span epub:type="z3998:roman">XII</span>: Pinocchio Receives a Present of Five Gold Pieces</a>
 				</li>
 				<li>
-					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: The Inn Of The Red Crawfish</a>
+					<a href="text/chapter-13.xhtml"><span epub:type="z3998:roman">XIII</span>: The Inn of the Red Crawfish</a>
 				</li>
 				<li>
 					<a href="text/chapter-14.xhtml"><span epub:type="z3998:roman">XIV</span>: Pinocchio Falls Amongst Assassins</a>
 				</li>
 				<li>
-					<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: The Assassins Hang Pinocchio To The Big Oak</a>
+					<a href="text/chapter-15.xhtml"><span epub:type="z3998:roman">XV</span>: The Assassins Hang Pinocchio to the Big Oak</a>
 				</li>
 				<li>
-					<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: The Beautiful Child Rescues The Puppet</a>
+					<a href="text/chapter-16.xhtml"><span epub:type="z3998:roman">XVI</span>: The Beautiful Child Rescues the Puppet</a>
 				</li>
 				<li>
 					<a href="text/chapter-17.xhtml"><span epub:type="z3998:roman">XVII</span>: Pinocchio Will Not Take His Medicine</a>
 				</li>
 				<li>
-					<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: Pinocchio Again Meets The Fox And The Cat</a>
+					<a href="text/chapter-18.xhtml"><span epub:type="z3998:roman">XVIII</span>: Pinocchio Again Meets the Fox and the Cat</a>
 				</li>
 				<li>
-					<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: Pinocchio Is Robbed Of His Money</a>
+					<a href="text/chapter-19.xhtml"><span epub:type="z3998:roman">XIX</span>: Pinocchio Is Robbed of His Money</a>
 				</li>
 				<li>
-					<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: Pinocchio Starts Back To The Fairy’s House</a>
+					<a href="text/chapter-20.xhtml"><span epub:type="z3998:roman">XX</span>: Pinocchio Starts Back to the Fairy’s House</a>
 				</li>
 				<li>
-					<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: Pinocchio Acts As Watch Dog</a>
+					<a href="text/chapter-21.xhtml"><span epub:type="z3998:roman">XXI</span>: Pinocchio Acts as Watch Dog</a>
 				</li>
 				<li>
-					<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: Pinocchio Discovers The Robbers</a>
+					<a href="text/chapter-22.xhtml"><span epub:type="z3998:roman">XXII</span>: Pinocchio Discovers the Robbers</a>
 				</li>
 				<li>
-					<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: Pinocchio Flies To The Seashore</a>
+					<a href="text/chapter-23.xhtml"><span epub:type="z3998:roman">XXIII</span>: Pinocchio Flies to the Seashore</a>
 				</li>
 				<li>
-					<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: Pinocchio Finds The Fairy Again</a>
+					<a href="text/chapter-24.xhtml"><span epub:type="z3998:roman">XXIV</span>: Pinocchio Finds the Fairy Again</a>
 				</li>
 				<li>
-					<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: Pinocchio Promises The Fairy To Be Good</a>
+					<a href="text/chapter-25.xhtml"><span epub:type="z3998:roman">XXV</span>: Pinocchio Promises the Fairy to Be Good</a>
 				</li>
 				<li>
 					<a href="text/chapter-26.xhtml"><span epub:type="z3998:roman">XXVI</span>: The Terrible Dog Fish</a>
 				</li>
 				<li>
-					<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: Pinocchio Is Arrested By The Gendarmes</a>
+					<a href="text/chapter-27.xhtml"><span epub:type="z3998:roman">XXVII</span>: Pinocchio Is Arrested by the Gendarmes</a>
 				</li>
 				<li>
-					<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: Pinocchio Escapes Being Fried Like A Fish</a>
+					<a href="text/chapter-28.xhtml"><span epub:type="z3998:roman">XXVIII</span>: Pinocchio Escapes Being Fried Like a Fish</a>
 				</li>
 				<li>
-					<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: He Returns To The Fairy’s House</a>
+					<a href="text/chapter-29.xhtml"><span epub:type="z3998:roman">XXIX</span>: He Returns to the Fairy’s House</a>
 				</li>
 				<li>
-					<a href="text/chapter-30.xhtml"><span epub:type="z3998:roman">XXX</span>: The “Land Of Boobies”</a>
+					<a href="text/chapter-30.xhtml"><span epub:type="z3998:roman">XXX</span>: The “Land of Boobies”</a>
 				</li>
 				<li>
-					<a href="text/chapter-31.xhtml"><span epub:type="z3998:roman">XXXI</span>: Pinocchio Enjoys Five Months Of Happiness</a>
+					<a href="text/chapter-31.xhtml"><span epub:type="z3998:roman">XXXI</span>: Pinocchio Enjoys Five Months of Happiness</a>
 				</li>
 				<li>
-					<a href="text/chapter-32.xhtml"><span epub:type="z3998:roman">XXXII</span>: Pinocchio Turns Into A Donkey</a>
+					<a href="text/chapter-32.xhtml"><span epub:type="z3998:roman">XXXII</span>: Pinocchio Turns Into a Donkey</a>
 				</li>
 				<li>
-					<a href="text/chapter-33.xhtml"><span epub:type="z3998:roman">XXXIII</span>: Pinocchio Is Trained For The Circus</a>
+					<a href="text/chapter-33.xhtml"><span epub:type="z3998:roman">XXXIII</span>: Pinocchio Is Trained for the Circus</a>
 				</li>
 				<li>
-					<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: Pinocchio Is Swallowed By The Dog Fish</a>
+					<a href="text/chapter-34.xhtml"><span epub:type="z3998:roman">XXXIV</span>: Pinocchio Is Swallowed by the Dog Fish</a>
 				</li>
 				<li>
-					<a href="text/chapter-35.xhtml"><span epub:type="z3998:roman">XXXV</span>: A Happy Surprise For Pinocchio</a>
+					<a href="text/chapter-35.xhtml"><span epub:type="z3998:roman">XXXV</span>: A Happy Surprise for Pinocchio</a>
 				</li>
 				<li>
-					<a href="text/chapter-36.xhtml"><span epub:type="z3998:roman">XXXVI</span>: Pinocchio At Last Ceases To Be A Puppet And Becomes A Boy</a>
+					<a href="text/chapter-36.xhtml"><span epub:type="z3998:roman">XXXVI</span>: Pinocchio at Last Ceases to Be a Puppet and Becomes a Boy</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
