--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -22,12 +22,12 @@
 			<b class="name">Mark C. Orton</b>, <b class="name">Melissa Er-Raqabi</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/16865">Project Gutenberg</a><br/>
-			and on digital scans available at the<br/>
-			<a href="IA_URL">Internet Archive</a>.</p>
+			and on digital scans available at<br/>
+			<a href="https://artvee.com/dl/little-girl-with-a-doll-2/">Artvee</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in YEAR by<br/>
-			<a href="ARTIST_WIKI_URL">ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">Little Girl With A Doll</i>,<br/>
+			a painting completed in 1863 by<br/>
+			<a href="https://en.wikipedia.org/wiki/Gyula_Bencz%C3%BAr">Gyula Benczúr</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
