Update source URLs.
closes #3, closes #5, closes #7

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -23,7 +23,7 @@
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/16865">Project Gutenberg</a><br/>
 			and on digital scans available at<br/>
-			<a href="https://artvee.com/dl/little-girl-with-a-doll-2/">Artvee</a>.</p>
+			<a href="https://hdl.handle.net/2027/uc1.31822043032606">HathiTrust Digital Library</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Little Girl With A Doll</i>,<br/>
 			a painting completed in 1863 by<br/>
