--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -23,7 +23,7 @@
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/16865">Project Gutenberg</a><br/>
 			and on digital scans available at<br/>
-			<a href="https://hdl.handle.net/2027/uc1.31822043032606">HathiTrust Digital Library</a>.</p>
+			<a href="https://babel.hathitrust.org/cgi/pt?id=uc1.31822043032606&amp;view=1up&amp;seq=9">HathiTrust Digital Library</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Little Girl With A Doll</i>,<br/>
 			a painting completed in 1863 by<br/>
