--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -22,8 +22,8 @@
 			<b class="name">Mark C. Orton</b>, <b class="name">Melissa Er-Raqabi</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/16865">Project Gutenberg</a><br/>
-			and on digital scans available at<br/>
-			<a href="https://babel.hathitrust.org/cgi/pt?id=uc1.31822043032606&amp;view=1up&amp;seq=9">HathiTrust Digital Library</a>.</p>
+			and on digital scans available at the<br/>
+			<a href="https://catalog.hathitrust.org/Record/102320971">HathiTrust Digital Library</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Little Girl With A Doll</i>,<br/>
 			a painting completed in 1863 by<br/>
