--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -139,7 +139,7 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">Pinocchio: The Tale of a Puppet</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">The Adventures of Pinocchio</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
