--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -14,8 +14,8 @@
 			<p><i epub:type="se:name.publication.book">Pinocchio</i><br/>
 			was published in 1883 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Carlo_Collodi">Carlo Collodi</a>.</p>
-			<p>This ebook was produced for the<br/>
-			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
+			<p>This ebook was produced for<br/>
+			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
 			<a href="https://davidangel.net">David Angel</a>,<br/>
 			and is based on a transcription produced in 2005 by<br/>
