--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -19,7 +19,7 @@
 			by<br/>
 			<a href="https://davidangel.net">David Angel</a>,<br/>
 			and is based on a transcription produced in 2005 by<br/>
-			<b class="name">Mark <abbr class="name">C.</abbr> Orton</b>, <b class="name">Melissa Er-Raqabi</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<b epub:type="z3998:personal-name">Mark <abbr epub:type="z3998:given-name">C.</abbr> Orton</b>, <b epub:type="z3998:personal-name">Melissa Er-Raqabi</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
 			<a href="https://www.gutenberg.org/ebooks/16865">Project Gutenberg</a><br/>
 			and on digital scans available at the<br/>
