--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -25,7 +25,7 @@
 			and on digital scans available at the<br/>
 			<a href="https://catalog.hathitrust.org/Record/102320971">HathiTrust Digital Library</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">Little Girl With A Doll</i>,<br/>
+			<i epub:type="se:name.visual-art.painting">Little Girl with a Doll</i>,<br/>
 			a painting completed in 1863 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Gyula_Bencz%C3%BAr">Gyula Benczúr</a>.<br/>
 			The cover and title pages feature the<br/>
